# vargo

./: .gitmodules  Cargo.toml  README.md  build.rs
examples/multiple_crates/: Cargo.toml
examples/multiple_crates/crate_a/: Cargo.toml
examples/multiple_crates/crate_a/src/: lib.rs
examples/multiple_crates/crate_b/: Cargo.toml
examples/multiple_crates/crate_b/src/: main.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
src/: main.rs
