[package]
name = "vargo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
colored = "2.2.0"
include_dir = "0.7.4"
regex = "1.11.1"
serde_json = "1.0.134"
shell-words = "1.1.0"
tempdir = "0.3.7"
toml = "0.8.19"
